--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "react-node-boilerplate",
-  "version": "1.0.0",
-  "description": "A React Js and Node Js boilerplate for building a new project. It uses create-react-app",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client-install": "npm install --prefix client",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "engines": {
-    "node": "10.10.0"
-  },
-  "author": "Imran Sayed",
-  "license": "ISC",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "concurrently": "^4.0.1",
-    "cors": "^2.8.5",
-    "express": "^4.16.3",
-    "mongoose": "^5.3.1",
-    "path": "^0.12.7",
-    "validator": "^10.8.0"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-geocode": "^0.1.2",
+    "react-google-autocomplete": "^1.1.0",
+    "react-google-maps": "^9.4.5",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
